survey on index

--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -62,6 +62,17 @@
 </div>
 </div>
 </section>
+<section class="hero is-info" style="background-image: linear-gradient(to bottom right, purple,navy);">
+  <div class="hero-body">
+     <p class="title is-2"><i>Help us</i> get some validated learning </p>
+      <p class="subtitle">To really bring Counekt to life, we need to understand what you, as potential users, actually want and need. Your feedback will directly shape the future of this project. Let's create something great together! </p>
+  </div>
+</section>
+<section class="hero is-info" style="background-image: linear-gradient(to bottom right, indigo,navy);">
+  <div class="container is-fluid">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfscGT7W_oyR3T-mYfkyd-3uSGv6H9bl9pACj9pYLCMz8EDTg/viewform?embedded=true" height="3005" frameborder="0" marginheight="0" marginwidth="0" style="width: 100%; max-height:  500px;">Loading…</iframe>
+</div>
+</section>
 {% endblock %}
 {% block scripts %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
