--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -30,7 +30,7 @@
 </section>
 <section class="section hero">
   <div class="hero-body" style="max-width: 1080px; margin: 0 auto;">
-  <h1 class="title is-2 is-spaced buzzword-container"><i>The</i> <span class="buzzword"></span> place</h1>
+  <h1 class="title is-2 is-spaced buzzword-container"><span class="text"><i>The</i></span> <span class="buzzword text"></span> <span class="text">place</span></h1>
   <hr>
   <h2 class="subtitle">
     As a promising online <i>meeting/management/market</i> platform, <strong>Counekt</strong> seeks to provide <strong>entrepreneurs</strong>, <strong>freelancers</strong> and likeminded with a <strong>flexible network</strong>, and a direct access to <strong>DAOs</strong> (decentralized autonomous organizations) and their <strong>exchange</strong>, thereby offering them the tools to bring their efforts to fruition.
