--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -57,7 +57,7 @@
       <hr style="color: rgb(235, 235, 245)">
       <div class="container" style="max-width: 1000px;">
     <figure class="image is-16by9">
-     <iframe class="has-ratio" id="counekt-yt-vid" width="560" height="315" data-src="https://www.youtube.com/embed/p1E1cROBUAM?si=k3pnQgT36s_qGibV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen> </iframe>
+     <iframe class="has-ratio" id="counekt-yt-vid" width="560" height="315" data-src="https://www.youtube.com/embed/qgn_RWnCO4s?si=38MSnQ4f7mdEkSO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen> </iframe>
    </figure>
  </div>
  <hr style="color: rgb(235, 235, 245)">
