fixes for devlog 2

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -14,16 +14,16 @@
 			        </div>
 		        </div>
 		        <br>
-		        <p class="subtitle is-4 is-close">Gender</p>
-		        <div class="field is-expanded" id="gender-box">
+		        <p class="subtitle is-4 is-close">Sex</p>
+		        <div class="field is-expanded" id="sex-box">
 		            <div class='select'> 
-	        			<select id="gender"> 
+	        			<select id="sex"> 
 	          			<option selected>Unspecified</option>
 	          			<option value="Male">Male</option>
 	         			<option value="Female">Female</option>	      
 	         			</select>
 	    			</div>
-	    			<div id="feedback-gender" class="feedback help level-left">
+	    			<div id="feedback-sex" class="feedback help level-left">
 	    				<div class="message"></div>
 			        </div>
 		    	</div>
