--- a/app/templates/profile/user/profile.html
+++ b/app/templates/profile/user/profile.html
@@ -330,6 +330,7 @@ $('#location-field').keypress(function(event){
   if(event.keyCode == 13){
     console.log("coord");
     getCoordinates();
+    $(this).blur();
   }
 });
 
